# advent-of-code-2022

./: .gitignore  advent-of-code2022.cabal  hie.yaml
day1/: Day1.hs
day2/: Day2.hs
day3/: Day3.hs
day4/: Day4.hs
day5/: Day5.hs
day6/: Day6.hs
day7/: Day7.hs
day8/: Day8.hs
