cabal-version:      2.4
name:               advent-of-code2022
version:            0.1.0.0

-- A short (one-line) description of the package.
-- synopsis:

-- A longer description of the package.
-- description:

-- A URL where users can report bugs.
-- bug-reports:

-- The license under which the package is released.
-- license:
author:             Gustaf Rydholm
maintainer:         gustaf.rydholm@gmail.com

-- A copyright notice.
-- copyright:
-- category:
extra-source-files: CHANGELOG.md

common common-all
    build-depends:    base ^>=4.15.1.0
    default-language: Haskell2010
    ghc-options:      -Wall


executable day1
    import:           common-all
    main-is:          Day1.hs
    hs-source-dirs:   day1
