cabal-version:      3.8
name:               advent-of-code2022
version:            0.1.0.0

-- A short (one-line) description of the package.
-- synopsis:

-- A longer description of the package.
-- description:

-- A URL where users can report bugs.
-- bug-reports:

-- The license under which the package is released.
-- license:
author:             Gustaf Rydholm
maintainer:         gustaf.rydholm@gmail.com

-- A copyright notice.
-- copyright:
-- category:
extra-source-files: CHANGELOG.md

common common-all
    build-depends:    base ^>=4.17.0.0
    default-language: Haskell2010
    ghc-options:      -Wall


executable day1
    import:           common-all
    main-is:          Day1.hs
    hs-source-dirs:   day1

executable day2
    import:           common-all
    build-depends:    split ^>=0.2.3
    main-is:          Day2.hs
    hs-source-dirs:   day2

executable day3
    import:           common-all
    build-depends:    unordered-containers ^>=0.2.19.1,
                      containers ^>=0.6.6
    main-is:          Day3.hs
    hs-source-dirs:   day3

executable day4
    import:           common-all
    build-depends:    split ^>=0.2.3,
                      unordered-containers ^>=0.2.19.1,
                      containers ^>=0.6.6
    main-is:          Day4.hs
    hs-source-dirs:   day4

executable day5
    import:           common-all
    main-is:          Day5.hs
    build-depends:    split ^>=0.2.3,
                      unordered-containers ^>=0.2.19.1,
                      containers ^>=0.6.6
    hs-source-dirs:   day5

executable day6
    import:           common-all
    build-depends:    split ^>=0.2.3,
                      unordered-containers ^>=0.2.19.1,
                      containers ^>=0.6.6
    main-is:          Day6.hs
    hs-source-dirs:   day6

executable day7
    import:           common-all
    build-depends:    split ^>=0.2.3,
                      unordered-containers ^>=0.2.19.1,
                      containers ^>=0.6.6
    main-is:          Day7.hs
    hs-source-dirs:   day7

executable day8
    import:           common-all
    build-depends:    split ^>=0.2.3,
                      unordered-containers ^>=0.2.19.1,
                      containers ^>=0.6.6
    main-is:          Day8.hs
    hs-source-dirs:   day8
